fix overflow carousel

--- a/styles/scss/_projectsSection.scss
+++ b/styles/scss/_projectsSection.scss
@@ -17,7 +17,6 @@ section.projects {
     .main-carousel {
         display: flex;
         flex-direction: column;
-        width: 100%;
         margin: auto;
         bottom: 10%;
         margin-left: 1.5%;
@@ -41,7 +40,7 @@ section.projects {
             background-color: white;
             border-radius: 25px;
             padding: 2%;
-            margin: 1%;
+            margin: 0.5%;
             box-shadow: 1px 2px 2px rgb(152, 156, 165);
 
             
