--- a/styles/style.css
+++ b/styles/style.css
@@ -520,7 +520,6 @@ section.projects h2 {
 section.projects .main-carousel {
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin: auto;
   bottom: 10%;
   margin-left: 1.5%;
@@ -541,7 +540,7 @@ section.projects .main-carousel .carousel-cell {
   background-color: white;
   border-radius: 25px;
   padding: 2%;
-  margin: 1%;
+  margin: 0.5%;
   box-shadow: 1px 2px 2px #989ca5;
 }
 section.projects .main-carousel .carousel-cell p {
